--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,14 +7,14 @@
 
 <br>
 
-<tabs>
-  <tab *ngFor="let tab of tabs">
-    <tab-title>
+<app-tabs>
+  <app-tab *ngFor="let tab of tabs">
+    <app-tab-title>
       Tab <b>{{ tab }}</b> title
-    </tab-title>
-    <tab-content>
+    </app-tab-title>
+    <app-tab-content>
       Tab <b>{{ tab }}</b> content
       <app-test [tab]="tab"></app-test>
-    </tab-content>
-  </tab>
-</tabs>
+    </app-tab-content>
+  </app-tab>
+</app-tabs>
